Let the pure zsh plugin set the Kitty tab title

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -13,14 +13,22 @@ scrollback_pager_history_size 100000
 window_padding_width 0 16
 
 # Tab bar
+tab_bar_margin_color black
 tab_bar_margin_width 16.0
 tab_bar_style powerline
 tab_powerline_style slanted
 tab_title_template " {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} "
-tab_bar_margin_color black
+
+# Open new tabs in the same working directory as the current tab.
+map kitty_mod+t new_tab_with_cwd
+map cmd+t       new_tab_with_cwd
+
+# Stop kitty setting the tab title, and let the zsh pure extension do it,
+# because I like its titles better.
+shell_integration no-title
 
 # OS specific tweaks
-macos_show_window_title_in window
+macos_show_window_title_in none
 macos_titlebar_color background
 
 # Keyboard shortcuts
@@ -29,12 +37,13 @@ map --when-focus-on var:in_editor cmd+q
 map --when-focus-on var:in_editor cmd+v
 map --when-focus-on var:in_editor cmd+w
 map --when-focus-on var:in_editor cmd+x
-
-map kitty_mod+t new_tab_with_cwd
-map cmd+t       new_tab_with_cwd
+map --when-focus-on var:in_editor cmd+z
 
 # Theme
 include nordfox-theme.conf
+
+# Control kitty using the kitten command line tool.
+allow_remote_control yes
 
 
 # BEGIN_KITTY_FONTS
