--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -7,6 +7,8 @@ font-family-italic = "BerkeleyMono Nerd Font Italic"
 font-size = 15
 font-thicken = false
 macos-titlebar-style = "tabs"
+selection-background = "#22262f"
+selection-foreground = "white"
 shell-integration-features = no-title
 theme = "nord"
 window-padding-x = 16
