Stop using a global Neovim status line

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -5,7 +5,7 @@ font-family-bold = "BerkeleyMono Nerd Font Bold"
 font-family-bold-italic = "BerkeleyMono Nerd Font Bold Italic"
 font-family-italic = "BerkeleyMono Nerd Font Italic"
 font-size = 15
-font-thicken = false
+font-thicken = true
 macos-titlebar-style = "tabs"
 selection-background = "#22262f"
 selection-foreground = "white"
