--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,7 @@ indent_style = space
 insert_final_newline = true
 tab_width = 2
 trim_trailing_whitespace = true
+
+[*.swift]
+indent_size = 4
+tab_width = 2
