Ghostty settings tweaks

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -11,5 +11,8 @@ selection-background = "#22262f"
 selection-foreground = "white"
 shell-integration-features = no-title
 theme = "nord"
+window-height = 40
+window-inherit-font-size = true
 window-padding-x = 16
 window-padding-y = 4
+window-width = 120
