Update zed AI settings.

--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -10,10 +10,10 @@
   "features": {
     "edit_prediction_provider": "zed"
   },
-  "assistant": {
+  "agent": {
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-3-7-sonnet-latest"
+      "model": "claude-sonnet-4"
     },
     "version": "2"
   },
