Add mcp-server-context7 to Zed's context_servers settings

--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -7,6 +7,15 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "context_servers": {
+    "mcp-server-context7": {
+      "source": "extension",
+      "enabled": true,
+      "settings": {
+        "default_minimum_tokens": "10000"
+      }
+    }
+  },
   "features": {
     "edit_prediction_provider": "copilot"
   },
