--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -16,3 +16,4 @@ window-inherit-font-size = true
 window-padding-x = 16
 window-padding-y = 4
 window-width = 120
+keybind = cmd+f=write_screen_file:open
