--- a/environments/home/Brewfile
+++ b/environments/home/Brewfile
@@ -58,6 +58,7 @@ cask 'ghostty'
 brew 'lazygit'
 brew 'mise'
 brew 'neovim'
+brew 'stylua'
 cask 'swiftformat-for-xcode'
 cask 'visual-studio-code'
 mas 'Xcode', id: 497799835
