--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -8,7 +8,7 @@ font-family-bold-italic = "BerkeleyMono Nerd Font Bold Italic"
 font-family-italic = "BerkeleyMono Nerd Font Italic"
 font-size = 15
 font-thicken = true
-macos-titlebar-style = "tabs"
+macos-titlebar-style = "native"
 selection-background = "#22262f"
 selection-foreground = "white"
 shell-integration-features = no-title
