Lighten up selection background for Ghostty and Neovim
I'd lightened the Ghostty background a bit, so this needed more
contrast.

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -9,7 +9,7 @@ font-family-italic = "BerkeleyMono Nerd Font Italic"
 font-size = 15
 font-thicken = true
 macos-titlebar-style = "native"
-selection-background = "#22262f"
+selection-background = "#404859"
 selection-foreground = "white"
 shell-integration-features = no-title
 theme = "nord"
