--- a/environments/work/Brewfile
+++ b/environments/work/Brewfile
@@ -22,6 +22,7 @@ brew 'zsh-syntax-highlighting'
 cask_args force: true
 cask 'notion'
 cask 'obsidian'
+cask 'rancher'
 cask 'raycast'
 cask 'scroll-reverser'
 cask 'visual-studio-code'
