Tweak Ghostty config for MacOS 26

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -17,6 +17,6 @@ theme = "nord"
 window-height = 40
 window-inherit-font-size = true
 window-padding-x = 16
-window-padding-y = 4
+window-padding-y = 4,8
 window-width = 120
-keybind = cmd+f=write_screen_file:paste
+keybind = cmd+f=write_screen_file:copy
