--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -20,12 +20,13 @@
     "edit_prediction_provider": "copilot"
   },
   "agent": {
+    "default_profile": "write",
     "default_model": {
       "provider": "copilot_chat",
-      "model": "claude-sonnet-4"
+      "model": "gpt-5"
     }
   },
-  "autosave": "on_window_change",
+  "autosave": "on_focus_change",
   "buffer_font_family": "BerkeleyMono Nerd Font",
   "buffer_font_features": {
     "calt": false // Don't use ligatures.
@@ -46,7 +47,8 @@
   "vim_mode": true,
   "languages": {
     "Swift": {
-      "tab_size": 4
+      "tab_size": 4,
+      "format_on_save": "off"
     },
     "Lua": {
       "formatter": {
