Zed changed the format of a config option

--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -43,7 +43,7 @@
     }
   },
   "tab_size": 2,
-  "relative_line_numbers": true,
+  "relative_line_numbers": "enabled",
   "vim_mode": true,
   "languages": {
     "Lua": {
