--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -7,6 +7,9 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "tabs": {
+    "git_status": true
+  },
   "context_servers": {
     "mcp-server-context7": {
       "source": "extension",
