Update README and Zed settings for clarity and accuracy
- Use HTTPS for git clone in README
- Update Mise name and link
- Change Zed agent profile to "ask" and model to "gpt-5.2"

--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -28,10 +28,10 @@
     "edit_prediction_provider": "copilot"
   },
   "agent": {
-    "default_profile": "write",
+    "default_profile": "ask",
     "default_model": {
       "provider": "copilot_chat",
-      "model": "gpt-5"
+      "model": "gpt-5.2"
     }
   },
   "autosave": "on_focus_change",
