Update to modern treesitter in Neovim.

--- a/environments/work/Brewfile
+++ b/environments/work/Brewfile
@@ -33,3 +33,6 @@ cask 'font-inconsolata-nerd-font'
 # mason.nvim needs these to build gems:
 brew 'coreutils'
 brew 'libyaml'
+
+# nvim-treesitter needs this:
+brew 'tree-sitter-cli'
